--- a/notes.org
+++ b/notes.org
@@ -20,13 +20,25 @@
  #+end_src
 
 ** MIDI Input Test
-
   Was able to receive midi input using _amidi_:
 
   #+begin_src bash
   [jack@jackslinuxlaptop musictools]$ amidi --list-devices
   Dir Device    Name
   IO  hw:2,0,0  Scarlett 18i20 USB MIDI 1
+
+  [jack@jackslinuxlaptop musictools]$ amidi --port=hw:2,0,0 --dump
+  90 5D 26
+  90 5B 2A
+  80 5D 5D
+  90 59 1A
+  80 5B 6F
+  80 59 60
+  18 bytes read
+  [jack@jackslinuxlaptop musictools]$ 
   #+end_src
 
-  
+https://www.alsa-project.org/alsa-doc/alsa-lib/
+
+
+./pcm -D default
